Fixed error 'Unsupported major.minot ver 61'